hphp/test/slow/reified-generics/verify-param-varray-2.php.expectf
yes
yes
yes
yes

Catchable fatal error: Argument 1 passed to f() must be an instance of HH\varray<int>, HH\keyset given in %s on line 9
